# updog

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  run.sh
examples/: example.webm
include/: client.h  protocol.h  server.h  utils.h
src/: client.c  main.c  server.c  utils.c
src/client/: TUI.c  client.c
src/packets/: message.c  packet.c
